[lucnguyenthe] chuyen doi project sang mo hinh CQRS

--- a/Do_An_Tot_Nghiep/appsettings.json
+++ b/Do_An_Tot_Nghiep/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "EduManageContext": "Server=localhost;Database=EduManage;Trusted_Connection=True;MultipleActiveResultSets=true;User ID=sa;Password=TGn<@7qY"
+  }
 }
