--- a/EduManage.Application/EduManage.Application.csproj
+++ b/EduManage.Application/EduManage.Application.csproj
@@ -7,11 +7,18 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\EduManage.Core.Application\EduManage.Core.Application.csproj" />
     <ProjectReference Include="..\EduManage.Domain\EduManage.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="MangeStudent\Dtos\" />
+    <Folder Include="MangeStudent\Queries\" />
   </ItemGroup>
 
 </Project>
